[gd_scene load_steps=7 format=3 uid="uid://6sbx0t006n6a"]

[ext_resource type="Theme" uid="uid://lrjbiv84hnp2" path="res://ui/theme.tres" id="1_mmsvh"]
[ext_resource type="Texture2D" uid="uid://dee6lu37ml4v4" path="res://ui/sprites/title_screen.png" id="2_n6myw"]
[ext_resource type="Script" path="res://ui/title_screen.gd" id="3_n5f8l"]
[ext_resource type="AudioStream" uid="uid://cwyg6s0kak872" path="res://sounds/Menu.wav" id="4_o6gs0"]
[ext_resource type="AudioStream" uid="uid://cvhegattqwxd3" path="res://sounds/Not_Allowed.wav" id="5_5yvkb"]
[ext_resource type="PackedScene" uid="uid://b8sjssrhc3brr" path="res://ui/help_screen.tscn" id="6_8qbgb"]

[node name="TitleScreen" type="TextureRect"]
process_mode = 3
offset_right = 640.0
offset_bottom = 576.0
theme = ExtResource("1_mmsvh")
texture = ExtResource("2_n6myw")
script = ExtResource("3_n5f8l")

[node name="Audio" type="Node" parent="."]

[node name="Menu" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_o6gs0")
volume_db = -5.0
pitch_scale = 1.2

[node name="Denied" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_5yvkb")
volume_db = -5.0
pitch_scale = 1.2

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(384, 32)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = -188.0
offset_right = -128.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 16
columns = 2

[node name="NewGame" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.188235, 0.407843, 0.313726, 1)
theme_override_font_sizes/font_size = 48
text = "  New Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Indicator" type="Label" parent="GridContainer/NewGame"]
layout_mode = 2
offset_right = 158.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0.188235, 0.407843, 0.313726, 1)
theme_override_font_sizes/font_size = 48
text = ">"

[node name="HowToPlay" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.188235, 0.407843, 0.313726, 1)
theme_override_font_sizes/font_size = 48
text = "  How to Play"
horizontal_alignment = 1

[node name="Options" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.188235, 0.407843, 0.313726, 1)
theme_override_font_sizes/font_size = 48
text = "  Options"
horizontal_alignment = 1

[node name="Exit" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.188235, 0.407843, 0.313726, 1)
theme_override_font_sizes/font_size = 48
text = "  Exit"
horizontal_alignment = 1

[node name="HelpScreen" parent="." instance=ExtResource("6_8qbgb")]
unique_name_in_owner = true
visible = false
layout_mode = 0
